# fastapi-backend-template

./: .gitignore  .ruff.toml  README.md  docker-compose.yml  foo.py  main.py  pyproject.toml  sops.yaml
.secrets/: example.toml
app/: databases.py  depends.py  exceptions.py  life_span.py  log.py  main.py  response.py  router.py
app/core/: config_sources.py  correlation_id.py  databases.py  life_span.py  log.py  pydantic.py  response.py  settings.py
app/middleware/: access.py  core.py  error_hooks.py  exc_hook_abc.py
backend/: pyproject.toml
backend/app/: main.py  response.py
backend/app/core/: config_sources.py  configs.py  correlation_id.py  pydantic.py  secrets.py
backend/app/middleware/: access.py  core.py  error_hooks.py  exc_hook_abc.py
configs/: development.toml
scripts/: secrets_loader.py
server/app/: main.py
