[project]
name = "fastapi-backend-template"
version = "0.1.0"
description = "personal and professional template I use for FastAPI backend applications with PostgresSQL + Redis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.119.0",
    "itsdangerous>=2.2.0",
    "loguru>=0.7.3",
    "msgspec>=0.19.0",
    "orjson>=3.11.3",
    "pydantic-settings>=2.11.0",
    "redis[hiredis]>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.44",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

